style(Admin): Fixed users overflow

--- a/src/assets/css/admin/People_Table.module.css
+++ b/src/assets/css/admin/People_Table.module.css
@@ -7,7 +7,7 @@
   height: 90vh;
   border-radius: 15px;
   position: sticky;
-  max-height: 45vh;
+  max-height: 95%;
   /* padding: 10px 20px; */
 }
 .tabs {
